# shai-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/shai/: config.py  main.py
src/shai_python/: __init__.py  config.py  config.template.yaml  main.py  strings.py
